<resources>
    <string name="app_name">Calculator_2</string>
    <string name="c">C</string>
    <string name="_7">7</string>
    <string name="_1">1</string>
    <string name="l_b">(</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_8">8</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="r_b">)</string>
    <string name="_9">9</string>
    <string name="_6">6</string>
    <string name="dot">.</string>
    <string name="equals_to">=</string>
    <string name="_0">0</string>
    <string name="divide">/</string>
    <string name="multiply">x</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="todo">TODO</string>
</resources>