<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/inputText"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:ellipsize="start"
        android:textAlignment="textEnd"
        android:textSize="40sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/app_name"/>

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        android:ellipsize="start"
        android:textAlignment="textEnd"
        android:textColor="@color/black"
        android:textSize="45sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputText"
        tools:text="@string/app_name" />

    <ImageView
        android:id="@+id/backspace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:src="@drawable/ic_baseline_backspace_24"
        app:layout_constraintBottom_toTopOf="@id/buttonPanel"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/todo" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/buttonPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result">

        <Button
            android:id="@+id/reset"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="@string/c"
            android:textSize="40sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/buttonPanel" />

        <Button
            android:id="@+id/brackets"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="10dp"
            android:text="@string/l_b"
            android:textAlignment="center"
            android:textSize="40sp"
            app:layout_constraintStart_toEndOf="@id/reset"
            app:layout_constraintTop_toTopOf="@+id/buttonPanel" />

        <Button
            android:id="@+id/bracket2"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="10dp"
            android:text="@string/r_b"
            android:textAlignment="center"
            android:textSize="40sp"
            app:layout_constraintStart_toEndOf="@id/brackets"
            app:layout_constraintTop_toTopOf="@+id/buttonPanel" />

        <Button
            android:id="@+id/divison"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="10dp"
            android:text="@string/divide"
            android:textAlignment="center"
            android:textSize="50sp"
            app:layout_constraintStart_toEndOf="@id/bracket2"
            app:layout_constraintTop_toTopOf="@+id/buttonPanel" />

        <Button
            android:id="@+id/seven"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="@string/_7"
            android:textSize="40sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/reset" />

        <Button
            android:id="@+id/four"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="@string/_4"
            android:textSize="40sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/seven" />

        <Button
            android:id="@+id/one"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="@string/_1"
            android:textSize="40sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/four" />

        <Button
            android:id="@+id/zero"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="@string/_0"
            android:textSize="40sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/one" />

        <Button
            android:id="@+id/eight"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="10dp"
            android:text="@string/_8"
            android:textSize="40sp"
            app:layout_constraintStart_toEndOf="@id/seven"
            app:layout_constraintTop_toBottomOf="@+id/brackets" />

        <Button
            android:id="@+id/nine"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="10dp"
            android:text="@string/_9"
            android:textSize="40sp"
            app:layout_constraintStart_toEndOf="@id/eight"
            app:layout_constraintTop_toBottomOf="@+id/bracket2" />

        <Button
            android:id="@+id/multiply"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="10dp"
            android:text="@string/multiply"
            android:textAlignment="center"
            android:textSize="40sp"
            app:layout_constraintStart_toEndOf="@id/nine"
            app:layout_constraintTop_toBottomOf="@+id/divison" />

        <Button
            android:id="@+id/five"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="10dp"
            android:text="@string/_5"
            android:textSize="40sp"
            app:layout_constraintStart_toEndOf="@id/four"
            app:layout_constraintTop_toBottomOf="@+id/eight" />

        <Button
            android:id="@+id/six"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="10dp"
            android:text="@string/_6"
            android:textSize="40sp"
            app:layout_constraintStart_toEndOf="@id/five"
            app:layout_constraintTop_toBottomOf="@+id/nine" />

        <Button
            android:id="@+id/subtract"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="10dp"
            android:text="@string/minus"
            android:textAlignment="center"
            android:textSize="60sp"
            app:layout_constraintStart_toEndOf="@id/six"
            app:layout_constraintTop_toBottomOf="@+id/multiply" />

        <Button
            android:id="@+id/two"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="10dp"
            android:text="@string/_2"
            android:textSize="40sp"
            app:layout_constraintStart_toEndOf="@id/one"
            app:layout_constraintTop_toBottomOf="@+id/five" />

        <Button
            android:id="@+id/three"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="10dp"
            android:text="@string/_3"
            android:textSize="40sp"
            app:layout_constraintStart_toEndOf="@id/two"
            app:layout_constraintTop_toBottomOf="@+id/six" />

        <Button
            android:id="@+id/add"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="10dp"
            android:text="@string/plus"
            android:textAlignment="center"
            android:textSize="60sp"
            app:layout_constraintStart_toEndOf="@id/three"
            app:layout_constraintTop_toBottomOf="@+id/subtract" />

        <Button
            android:id="@+id/dot"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="10dp"
            android:text="@string/dot"
            android:textSize="50sp"
            app:layout_constraintStart_toEndOf="@id/zero"
            app:layout_constraintTop_toBottomOf="@+id/two" />

        <Button
            android:id="@+id/equals"
            android:layout_width="170dp"
            android:layout_height="80dp"
            android:layout_marginStart="10dp"
            android:text="@string/equals_to"
            android:textAlignment="center"
            android:textSize="60sp"
            app:layout_constraintStart_toEndOf="@id/dot"
            app:layout_constraintTop_toBottomOf="@+id/three" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>